# dynamic-flat-filter

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  iwyu.imp
benchmark/: benchmark.cpp  benchmark_utils.hpp  benchmark_visualization.ipynb  predefine.hpp
benchmark/benchmarks/: benchmark_utils.hpp  benchmark_utils_CAIDA.hpp  benchmark_utils_YCSB.hpp  construction_time_i10d1.cpp  construction_time_i10d5.cpp  deletion_throughput.cpp  execution_time_i3l9d1.cpp  execution_time_i9l3d1.cpp  expansion_time.cpp  false_positive_rate.cpp  insertion_throughput.cpp  insertion_throughput_CAIDA.cpp  insertion_throughput_YCSB.cpp  negative_query_addressing_time.cpp  negative_query_throughput.cpp  positive_query_addressing_time.cpp  positive_query_throughput.cpp  query_throughput_CAIDA.cpp  query_throughput_YCSB.cpp  space_usage.cpp
benchmark/impl/bamboofilter/: bamboofilter.hpp  predefine.hpp  segment.hpp
benchmark/impl/compactedlogarithmicdynamiccuckoofilter/: compactedlogarithmicdynamiccuckoofilter.hpp  cuckoofilter.hpp
benchmark/impl/dynamicbloomfilter/: countingbloomfilter.hpp  dynamicbloomfilter.hpp
benchmark/impl/dynamiccuckoofilter/: bithack.hpp  cuckoofilter.hpp  dynamiccuckoofilter.hpp
benchmark/impl/elasticbloomfilter/: elasticbloomfilter.hpp  param.hpp
benchmark/impl/infinifilter/: README.md  basic_infinifilter.hpp  chained_infinifilter.hpp  chaining.hpp  filter.hpp  fingerprint_growth_strategy.hpp  fingerprint_sacrifice.hpp  hash_functions.hpp  hash_type.hpp  iterator.hpp  quotient_filter.hpp
benchmark/impl/infinifilter/bitmap/: bitmap.hpp  quick_bit_vector.cpp  quick_bit_vector.hpp  quick_bit_vector_wrapper.hpp
src/: DFF.hpp  main.cpp  predefine.hpp  segment.hpp  singletable.hpp
src/utils/: bits.hpp  debug.hpp  hash.cpp  hash.hpp
test/: test_bamboofilter.cpp  test_compactedlogarithmicdynamiccuckoofilter.cpp  test_dynamicbloomfilter.cpp  test_dynamiccuckoofilter.cpp  test_infinifilter.cpp
